--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SaaS Project Manager - Organize Your Workflow</title>
+    <title>Saafy-Workplace Project Manager - Organize Your Workflow</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <header class="navbar">
-        <a href="{{ url_for('index') }}" class="logo">ProjectFlow</a>
+        <a href="{{ url_for('index') }}" class="logo">Saasfy-Workplace Projects Manager</a>
         <nav class="nav-links">
             <ul>
                 <li><a href="#" id="login-btn-nav">Login</a></li>
